# PyTonexControl

./: LICENSE  README.md  pyproject.toml
.github/workflows/: test.yml
src/pytonexcontrol/: __init__.py  tonex_one_controller.py
test/: test_protocol.py
